2007-04-29  Karl Berry  <karl@gnu.org>

	* makeinfo/cmds.c (cm_strong): doc fix.

	* makeinfo/makeinfo.h (paragraph_buffer_len): move decl here ...
	* makeinfo/makeinfo.c (paragraph_buffer_len): from here.
	* makeinfo/multi.c (select_output_environment): save and restore
	paragraph_buffer_len.  Otherwise, an exceptionally long multitable
	entry (gcal.texi) might realloc output_paragraph, thus increasing
	paragraph_buffer_len, and then we get back to the main text and
	restore the old output_paragraph, we'll be out of sync.  Yikes.
	(Thank you to Electric Fence and valgrind.)

2007-04-26  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (cmapOT1, cmapOT1IT, cmapOT1TT): new definitions
	for pdf so that searching and copying from pdf documents will find
	text properly, e.g., the "fi" in "file".  From Oleg.  Report from
	Frank K on tex-live.

	* util/gendocs_template: conform to new GNU style.  From Yavor.
	* util/gendocs_template_min: previous version, without SSI.

2007-04-21  Karl Berry  <karl@gnu.org>

	* system.h (DMALLOC_FUNC_CHECK) [DMALLOC_DEBUG]: #define.

2007-04-17  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: findex set and clear.
	From Kevin Ryde, 16 Apr 2007 11:15:00.

2007-04-12  Karl Berry  <karl@gnu.org>

	* doc/texinfo.txi: improve @: usage and documentation throughout.

2007-04-08  Karl Berry  <karl@gnu.org>

	* makeinfo/makeinfo.c (bs_escape_quote): new fn.
	(cm_image) <Info output>: call it, to escape the alt string.
	Also expand the alt string.
	bug-texinfo mail from Kevin Ryde, 26 Mar 2007 07:06:14.

	* doc/texinfo.tex (\printindex): set \plainfrenchspacing.

2007-04-07  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\defunpenalty): new register.
	(\startdefun): use it to avoid page breaks between a defun and a
	single defunx -- only allow breaks between multiple defunx's.
	From Oleg.

2007-04-03  Karl Berry  <karl@gnu.org>

	* doc/texinfo.tex (\whatsitskip, \whatsitpenalty): new registers.